--- a/advisor/style.css
+++ b/advisor/style.css
@@ -46,6 +46,59 @@ nav li:hover{
 
 }
 
+.userProfile {
+    color: rgb(255, 255, 255);
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-weight: bold;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.115);
+    margin-left: auto; 
+    margin-right: 5rem; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.bxs-user-circle{
+    font-size: 60px;
+    margin: 15px;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.dropdown{
+    width: 100px;
+    height: 80px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 60%;
+    right: 30%;
+    border: 1px solid rgba(0, 0, 0, 0.107);
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 1rem;
+    text-align: center;
+    display: none;
+
+}
+
+.dropdown button{
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 15px;
+    transition: .1s all ease;
+}
+
+.dropdown button:hover{
+    transform: scale(1.02);
+    color: red;
+}
+
+.userProfile:hover .dropdown{
+    display: block;
+}
+
 .search{
     display: flex;
     justify-content: center;
