--- a/resend/style.css
+++ b/resend/style.css
@@ -98,3 +98,80 @@ nav li:hover{
 .userProfile:hover .dropdown{
     display: block;
 }
+
+.wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+}
+
+form{
+    background-color: white;
+    padding: 4rem;
+    border-radius: 1rem;
+    text-align: center;
+    height: 250px ;
+}
+
+form i{
+    font-size: 80px;
+    
+}
+
+.inputWrap{
+    margin-top: 1.5rem;
+}
+
+.inputWrap input{
+    border: none;
+    width: 300px;
+    height: 50px;
+    background-color: whitesmoke;
+    padding-left: 1.5rem;
+    border-radius: 1rem;
+    font-weight: bold;
+    transition: all .1s ease;
+}
+
+.inputWrap input:hover{
+    background-color: rgb(227, 227, 227);
+    transform: scale(1.02);
+}
+
+.inputWrap input:focus{
+    outline: none;
+}
+
+.buttonWrap{
+    margin-top: 2.5rem;
+    display: flex;
+    justify-content: center;
+}
+
+.buttonWrap button{
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 1rem;
+    font-weight: bold;
+    transition: all .2s ease;
+}
+
+.buttonWrap button:hover{
+    background-color: rgb(255, 89, 0);
+    transform: scale(1.1);
+
+}
+
+.errorMessage h3{
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: red;
+    font-weight: 450;
+}
+
+.success{
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: rgb(37, 186, 0);
+    font-weight: 450;
+}
