upload profile system and profile page

--- a/home/style.css
+++ b/home/style.css
@@ -98,3 +98,16 @@ nav li:hover{
 .userProfile:hover .dropdown{
     display: block;
 }
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+}
+
+footer p {
+    color: #777;
+    font-size: 0.9rem;
+}
