--- a/advisor/style.css
+++ b/advisor/style.css
@@ -221,3 +221,16 @@ nav li:hover{
 .bx-info-circle{
     font-size: 25px;
 }
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+}
+
+footer p {
+    color: #777;
+    font-size: 0.9rem;
+}
