--- a/info/style.css
+++ b/info/style.css
@@ -113,6 +113,7 @@ footer p {
 }
 
 .container {
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     width: 80%;
     max-width: 900px;
     margin: 40px auto;
