--- a/login/style.css
+++ b/login/style.css
@@ -131,3 +131,16 @@ form i{
     font-weight: 450;
     text-decoration: none;
 }
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+}
+
+footer p {
+    color: #777;
+    font-size: 0.9rem;
+}
