--- a/profile/style.css
+++ b/profile/style.css
@@ -107,6 +107,10 @@ footer {
     background-color: #fff;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     margin-top: 40px;
+    bottom: 0%;
+    left: 0%;
+    position: absolute;
+    width: 100%;
 }
 
 footer p {
