--- a/profile/style.css
+++ b/profile/style.css
@@ -3,7 +3,8 @@ body{
     padding: 0;
     background-color: whitesmoke;
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
+    position: relative;
+    
 }
 nav{
     display: flex;
@@ -106,11 +107,11 @@ footer {
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    margin-top: 40px;
-    bottom: 0%;
-    left: 0%;
-    position: absolute;
+    margin-top: 200px;
+    bottom: 0;
+    left: 0;
     width: 100%;
+    
 }
 
 footer p {
