--- a/inbox/style.css
+++ b/inbox/style.css
@@ -237,6 +237,27 @@ color: #777;
     font-size: 25px;
 }
 
+.bxs-user-pin{
+    color: #545454;
+    font-size: 25px;
+}
+
+.profileInbox{
+    border: none;
+    color: white;
+    font-size: 20px;
+    background-color: #f9f9f9;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    align-items: center;
+}
+
+.profileInbox:hover{
+    background-color: #f0f0f0;
+}
+
 .form-chat{
     position: relative;
 }
@@ -246,5 +267,5 @@ color: #777;
     font-size: 10px;
     position: absolute;
     top: 15%;
-    left: 60%;
+    left: 81%;
 }
