--- a/advisor_profile/style.css
+++ b/advisor_profile/style.css
@@ -150,3 +150,19 @@ nav li:hover{
     line-height: 1.6;
 }
 
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 200px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    
+}
+
+footer p {
+    color: #777;
+    font-size: 0.9rem;
+}
